deployments/kubernetes/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pvc-server
  namespace: pvc
  labels:
    app.kubernetes.io/name: prompt-version-control
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prompt-version-control
    app.kubernetes.io/component: server
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
